--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,7 +3,8 @@ chapter_name: "Chapter "
 repo: https://github.com/Vinayak-NZ/ML-Imputation
 output_dir: docs
 rmd_files: ["index.Rmd", "01-what_is_imputation.Rmd", "02-what_is_ml.Rmd", 
-"03-why_use_ml.Rmd", "04-how_XGBoost.Rmd", "05-methods.Rmd", "06-results.Rmd"]
+"03-why_use_ml.Rmd", "04-how_XGBoost.Rmd", "05-methods.Rmd", "06-results.Rmd", "07-next_steps.Rmd",
+"08-resources.Rmd"]
 clean: [packages.bib, bookdown.bib]
 language:
   ui:
